--- a/RoomManager/RoomManager.csproj
+++ b/RoomManager/RoomManager.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DangNhap_DangKy.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DangNhap_DangKy.Designer.cs">
+      <DependentUpon>DangNhap_DangKy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuanlyPhong_Khach.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="QuanlyPhong_Khach.Designer.cs">
+      <DependentUpon>QuanlyPhong_Khach.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="DangNhap_DangKy.resx">
+      <DependentUpon>DangNhap_DangKy.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +78,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="QuanlyPhong_Khach.resx">
+      <DependentUpon>QuanlyPhong_Khach.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
