--- a/RoomManager/RoomManager.csproj
+++ b/RoomManager/RoomManager.csproj
@@ -70,6 +70,7 @@
     </Compile>
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\Room.cs" />
+    <Compile Include="Models\User.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuanlyPhong_Khach.cs">
